@@ -1,7 +1,3 @@
-/*
- * Copyright (c) Tarek Hosni El Alaoui 2017
- */
-
 package de.dytanic.cloudnetwrapper.server;
 
 import de.dytanic.cloudnet.lib.ConnectableAddress;
@@ -18,8 +14,6 @@ import de.dytanic.cloudnet.lib.server.template.TemplateResource;
 import de.dytanic.cloudnet.lib.service.ServiceId;
 import de.dytanic.cloudnet.lib.service.plugin.ServerInstallablePlugin;
 import de.dytanic.cloudnet.lib.user.SimpledUser;
-import de.dytanic.cloudnet.lib.utility.Acceptable;
-import de.dytanic.cloudnet.lib.utility.CollectionWrapper;
 import de.dytanic.cloudnet.lib.utility.document.Document;
 import de.dytanic.cloudnetwrapper.CloudNetWrapper;
 import de.dytanic.cloudnetwrapper.network.packet.out.PacketOutAddServer;
@@ -34,6 +28,7 @@ import net.md_5.bungee.config.ConfigurationProvider;
 import net.md_5.bungee.config.YamlConfiguration;
 
 import java.io.*;
+import java.net.URL;
 import java.net.URLConnection;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -43,6 +38,7 @@ import java.util.ArrayList;
 import java.util.Enumeration;
 import java.util.Objects;
 import java.util.Properties;
+import java.util.concurrent.TimeUnit;
 
 public class GameServer extends AbstractScreenService implements ServerDispatcher {
 
@@ -53,29 +49,20 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
     private ServerInfo serverInfo;
     private long startupTimeStamp = 0;
     private Path dir;
-    private String path, custom;
+    private String path;
 
     public GameServer(ServerProcess serverProcess, ServerStage serverStage, ServerGroup serverGroup) {
         this.serverProcess = serverProcess;
         this.serverStage = serverStage;
         this.serverGroup = serverGroup;
 
-        if (this.serverProcess.getMeta().getServerConfig().getProperties().contains(NetworkUtils.DEV_PROPERTY)) {
-            this.path = CloudNetWrapper.getInstance()
-                                       .getWrapperConfig()
-                                       .getDevServicePath() + NetworkUtils.SLASH_STRING + serverProcess.getMeta()
-                                                                                                       .getServiceId()
-                                                                                                       .getServerId();
-            this.custom = this.serverProcess.getMeta().getCustomServerDownload();
+        if (serverGroup.getGroupMode().equals(ServerGroupMode.STATIC) || serverGroup.getGroupMode()
+                                                                                    .equals(ServerGroupMode.STATIC_LOBBY)) {
+            this.path = "local/servers/" + serverGroup.getName() + NetworkUtils.SLASH_STRING + this.serverProcess.getMeta()
+                                                                                                                 .getServiceId()
+                                                                                                                 .getServerId();
         } else {
-            if (serverGroup.getGroupMode().equals(ServerGroupMode.STATIC) || serverGroup.getGroupMode()
-                                                                                        .equals(ServerGroupMode.STATIC_LOBBY)) {
-                this.path = "local/servers/" + serverGroup.getName() + NetworkUtils.SLASH_STRING + this.serverProcess.getMeta()
-                                                                                                                     .getServiceId()
-                                                                                                                     .getServerId();
-            } else {
-                this.path = "temp/" + serverGroup.getName() + NetworkUtils.SLASH_STRING + serverProcess.getMeta().getServiceId();
-            }
+            this.path = "temp/" + serverGroup.getName() + NetworkUtils.SLASH_STRING + serverProcess.getMeta().getServiceId();
         }
 
         this.dir = Paths.get(path);
@@ -83,16 +70,7 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
 
     @Override
     public int hashCode() {
-        int result = serverProcess != null ? serverProcess.hashCode() : 0;
-        result = 31 * result + (serverStage != null ? serverStage.hashCode() : 0);
-        result = 31 * result + (serverGroup != null ? serverGroup.hashCode() : 0);
-        result = 31 * result + (instance != null ? instance.hashCode() : 0);
-        result = 31 * result + (serverInfo != null ? serverInfo.hashCode() : 0);
-        result = 31 * result + (int) (startupTimeStamp ^ (startupTimeStamp >>> 32));
-        result = 31 * result + (dir != null ? dir.hashCode() : 0);
-        result = 31 * result + (path != null ? path.hashCode() : 0);
-        result = 31 * result + (custom != null ? custom.hashCode() : 0);
-        return result;
+        return Objects.hash(serverProcess, serverStage, serverGroup, instance, serverInfo, startupTimeStamp, dir, path);
     }
 
     @Override
@@ -104,19 +82,28 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
             return false;
         }
         final GameServer that = (GameServer) o;
-        return startupTimeStamp == that.startupTimeStamp && Objects.equals(serverProcess,
-                                                                           that.serverProcess) && serverStage == that.serverStage && Objects
-            .equals(serverGroup, that.serverGroup) && Objects.equals(instance, that.instance) && Objects.equals(serverInfo,
-                                                                                                                that.serverInfo) && Objects.equals(
-            dir,
-            that.dir) && Objects.equals(path, that.path) && Objects.equals(custom, that.custom);
+        return startupTimeStamp == that.startupTimeStamp &&
+            Objects.equals(serverProcess, that.serverProcess) &&
+            serverStage == that.serverStage &&
+            Objects.equals(serverGroup, that.serverGroup) &&
+            Objects.equals(instance, that.instance) &&
+            Objects.equals(serverInfo, that.serverInfo) &&
+            Objects.equals(dir, that.dir) &&
+            Objects.equals(path, that.path);
     }
 
     @Override
     public String toString() {
-        return '[' + serverProcess.getMeta().getServiceId().getServerId() + "/port=" + serverProcess.getMeta()
-                                                                                                    .getPort() + "/memory=" + serverProcess.getMeta()
-                                                                                                                                           .getMemory() + ']';
+        return "de.dytanic.cloudnetwrapper.server.GameServer{" +
+            "serverProcess=" + serverProcess +
+            ", serverStage=" + serverStage +
+            ", serverGroup=" + serverGroup +
+            ", instance=" + instance +
+            ", serverInfo=" + serverInfo +
+            ", startupTimeStamp=" + startupTimeStamp +
+            ", dir=" + dir +
+            ", path='" + path + '\'' +
+            "} " + super.toString();
     }
 
     public ServerInfo getServerInfo() {
@@ -143,10 +130,6 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
         return dir;
     }
 
-    public String getCustom() {
-        return custom;
-    }
-
     /**
      * Prepare the game server
      *
@@ -159,15 +142,15 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
         serverProcess.setServerStage(ServerStage.DOWNLOAD);
         long startupTime = System.currentTimeMillis();
 
-        for (ServerInstallablePlugin url : serverProcess.getMeta().getDownloadablePlugins()) {
-            switch (url.getPluginResourceType()) {
+        for (ServerInstallablePlugin plugin : serverProcess.getMeta().getPlugins()) {
+            switch (plugin.getPluginResourceType()) {
                 case URL: {
-                    if (!Files.exists(Paths.get("local/cache/web_plugins/" + url.getName() + ".jar"))) {
+                    if (!Files.exists(Paths.get("local/cache/web_plugins/" + plugin.getName() + ".jar"))) {
                         try {
-                            URLConnection urlConnection = new java.net.URL(url.getUrl()).openConnection();
+                            URLConnection urlConnection = new URL(plugin.getUrl()).openConnection();
                             urlConnection.setRequestProperty("User-Agent",
-                                                             "Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.11 (KHTML, like Gecko) Chrome/23.0.1271.95 Safari/537.11");
-                            Files.copy(urlConnection.getInputStream(), Paths.get("local/cache/web_plugins/" + url.getName() + ".jar"));
+                                                             NetworkUtils.USER_AGENT);
+                            Files.copy(urlConnection.getInputStream(), Paths.get("local/cache/web_plugins/" + plugin.getName() + ".jar"));
                         } catch (Exception ex) {
                             ex.printStackTrace();
                         }
@@ -175,33 +158,24 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
                 }
                 break;
                 case MASTER: {
-                    if (!Files.exists(Paths.get("local/cache/web_plugins/" + url.getName() + ".jar")) && CloudNetWrapper.getInstance()
-                                                                                                                        .getSimpledUser() != null) {
+                    if (!Files.exists(Paths.get("local/cache/web_plugins/" + plugin.getName() + ".jar")) && CloudNetWrapper.getInstance()
+                                                                                                                           .getSimpledUser() != null) {
                         try {
-                            URLConnection urlConnection = new java.net.URL(new StringBuilder(CloudNetWrapper.getInstance()
-                                                                                                            .getOptionSet()
-                                                                                                            .has("ssl") ? "https://" : "http://")
-                                                                               .append(CloudNetWrapper.getInstance()
-                                                                                                      .getWrapperConfig()
-                                                                                                      .getCloudnetHost())
-                                                                               .append(':')
-                                                                               .append(CloudNetWrapper.getInstance()
-                                                                                                      .getWrapperConfig()
-                                                                                                      .getWebPort())
-                                                                               .append("/cloudnet/api/v1/download")
-                                                                               .substring(0)).openConnection();
-                            urlConnection.setRequestProperty("User-Agent",
-                                                             "Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.11 (KHTML, like Gecko) Chrome/23.0.1271.95 Safari/537.11");
+                            URLConnection urlConnection = new URL(
+                                String.format("http://%s:%d/cloudnet/api/v1/download",
+                                              CloudNetWrapper.getInstance().getWrapperConfig().getCloudnetHost(),
+                                              CloudNetWrapper.getInstance().getWrapperConfig().getWebPort())).openConnection();
+                            urlConnection.setRequestProperty("User-Agent", NetworkUtils.USER_AGENT);
 
                             SimpledUser simpledUser = CloudNetWrapper.getInstance().getSimpledUser();
                             urlConnection.setRequestProperty("-Xcloudnet-user", simpledUser.getUserName());
                             urlConnection.setRequestProperty("-Xcloudnet-token", simpledUser.getApiToken());
                             urlConnection.setRequestProperty("-Xmessage", "plugin");
-                            urlConnection.setRequestProperty("-Xvalue", url.getName());
+                            urlConnection.setRequestProperty("-Xvalue", plugin.getName());
 
                             urlConnection.connect();
-                            System.out.println("Downloading " + url.getName() + ".jar");
-                            Files.copy(urlConnection.getInputStream(), Paths.get("local/cache/web_plugins/" + url.getName() + ".jar"));
+                            System.out.println("Downloading " + plugin.getName() + ".jar");
+                            Files.copy(urlConnection.getInputStream(), Paths.get("local/cache/web_plugins/" + plugin.getName() + ".jar"));
                             System.out.println("Download was completed successfully!");
                         } catch (Exception ex) {
                             ex.printStackTrace();
@@ -219,9 +193,9 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
                 case URL: {
                     if (!Files.exists(Paths.get("local/cache/web_plugins/" + url.getName() + ".jar"))) {
                         try {
-                            URLConnection urlConnection = new java.net.URL(url.getUrl()).openConnection();
+                            URLConnection urlConnection = new URL(url.getUrl()).openConnection();
                             urlConnection.setRequestProperty("User-Agent",
-                                                             "Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.11 (KHTML, like Gecko) Chrome/23.0.1271.95 Safari/537.11");
+                                                             NetworkUtils.USER_AGENT);
                             Files.copy(urlConnection.getInputStream(), Paths.get("local/cache/web_plugins/" + url.getName() + ".jar"));
                         } catch (Exception ex) {
                             ex.printStackTrace();
@@ -233,20 +207,13 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
                     if (!Files.exists(Paths.get("local/cache/web_plugins/" + url.getName() + ".jar")) && CloudNetWrapper.getInstance()
                                                                                                                         .getSimpledUser() != null) {
                         try {
-                            URLConnection urlConnection = new java.net.URL(new StringBuilder(CloudNetWrapper.getInstance()
-                                                                                                            .getOptionSet()
-                                                                                                            .has("ssl") ? "https://" : "http://")
-                                                                               .append(CloudNetWrapper.getInstance()
-                                                                                                      .getWrapperConfig()
-                                                                                                      .getCloudnetHost())
-                                                                               .append(':')
-                                                                               .append(CloudNetWrapper.getInstance()
-                                                                                                      .getWrapperConfig()
-                                                                                                      .getWebPort())
-                                                                               .append("/cloudnet/api/v1/download")
-                                                                               .substring(0)).openConnection();
+                            URLConnection urlConnection = new URL(
+                                String.format("http://%s:%d/cloudnet/api/v1/download",
+                                              CloudNetWrapper.getInstance().getWrapperConfig().getCloudnetHost(),
+                                              CloudNetWrapper.getInstance().getWrapperConfig().getWebPort()))
+                                .openConnection();
                             urlConnection.setRequestProperty("User-Agent",
-                                                             "Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.11 (KHTML, like Gecko) Chrome/23.0.1271.95 Safari/537.11");
+                                                             NetworkUtils.USER_AGENT);
 
                             SimpledUser simpledUser = CloudNetWrapper.getInstance().getSimpledUser();
                             urlConnection.setRequestProperty("-Xcloudnet-user", simpledUser.getUserName());
@@ -269,19 +236,19 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
             }
         }
 
-        if (serverGroup.getTemplates().size() == 0 && serverProcess.getMeta().getUrl() == null) {
+        if (serverGroup.getTemplates().size() == 0 && serverProcess.getMeta().getTemplateUrl() == null) {
             return false;
         }
 
-        if (serverGroup.getGroupMode().equals(ServerGroupMode.STATIC)) {
-            if (!Files.exists(dir) & !templateDownloader()) {
+        if (serverGroup.getGroupMode().equals(ServerGroupMode.STATIC) || serverGroup.getGroupMode().equals(ServerGroupMode.STATIC_LOBBY)) {
+            if (!Files.exists(dir) && !templateDownloader()) {
                 return false;
             }
         } else if (!templateDownloader()) {
             return false;
         }
 
-        for (ServerInstallablePlugin plugin : serverProcess.getMeta().getDownloadablePlugins()) {
+        for (ServerInstallablePlugin plugin : serverProcess.getMeta().getPlugins()) {
             FileUtility.copyFileToDirectory(new File("local/cache/web_plugins/" + plugin.getName() + ".jar"), new File(path + "/plugins"));
         }
 
@@ -314,10 +281,8 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
             FileUtility.insertData("files/bukkit.yml", path + "/bukkit.yml");
         }
 
-        if (!serverProcess.getMeta().isOnlineMode()) {
-            if (!Files.exists(Paths.get(path + "/spigot.yml"))) {
-                FileUtility.insertData("files/spigot.yml", path + "/spigot.yml");
-            }
+        if (!Files.exists(Paths.get(path + "/spigot.yml"))) {
+            FileUtility.insertData("files/spigot.yml", path + "/spigot.yml");
         }
 
         Files.deleteIfExists(Paths.get(path + "/plugins/CloudNetAPI.jar"));
@@ -355,16 +320,14 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
                 }
             }
 
-            Enumeration enumeration = this.serverProcess.getMeta().getServerProperties().keys();
+            Enumeration<Object> enumeration = this.serverProcess.getMeta().getProperties().keys();
             while (enumeration.hasMoreElements()) {
                 String x = enumeration.nextElement().toString();
-                properties.setProperty(x, this.serverProcess.getMeta().getServerProperties().getProperty(x));
+                properties.setProperty(x, this.serverProcess.getMeta().getProperties().getProperty(x));
             }
 
             properties.setProperty("server-ip", CloudNetWrapper.getInstance().getWrapperConfig().getInternalIP());
             properties.setProperty("server-port", serverProcess.getMeta().getPort() + NetworkUtils.EMPTY_STRING);
-            properties.setProperty("online-mode", serverProcess.getMeta().isOnlineMode() + NetworkUtils.EMPTY_STRING);
-            //properties.setProperty("server-name", serverProcess.getMeta().getServiceId().getServerId());
 
             motd = properties.getProperty("motd");
             try {
@@ -397,7 +360,7 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
         }
         this.serverInfo = new ServerInfo(serverProcess.getMeta().getServiceId(),
                                          CloudNetWrapper.getInstance().getWrapperConfig().getInternalIP(),
-                                         this.getServerProcess().getMeta().getPort(),
+                                         this.serverProcess.getMeta().getPort(),
                                          false,
                                          new ArrayList<>(),
                                          serverProcess.getMeta().getMemory(),
@@ -414,11 +377,8 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
 
         new Document().append("serviceId", serverProcess.getMeta().getServiceId())
                       .append("serverProcess", serverProcess.getMeta())
-                      .append("serverInfo",
-                              serverInfo)
-                      .append("ssl", CloudNetWrapper.getInstance().getOptionSet().has("ssl"))
-                      .append("memory",
-                              serverProcess.getMeta().getMemory())
+                      .append("serverInfo", serverInfo)
+                      .append("memory", serverProcess.getMeta().getMemory())
                       .saveAsConfig(Paths.get(path + "/CLOUD/config.json"));
 
         new Document().append("connection",
@@ -429,7 +389,7 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
 
         CloudNetWrapper.getInstance().getNetworkConnection().sendPacket(new PacketOutAddServer(this.serverInfo,
                                                                                                this.serverProcess.getMeta()));
-        System.out.println("Server " + toString() + " started in [" + (System.currentTimeMillis() - startupTime) + " milliseconds]");
+        System.out.println("Server " + this + " started in [" + (System.currentTimeMillis() - startupTime) + " milliseconds]");
         this.startupTimeStamp = System.currentTimeMillis();
 
         startProcess();
@@ -459,14 +419,13 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
 
         if (CloudNetWrapper.getInstance().getWrapperConfig().isSavingRecords()) {
             try {
-                File directory = new File("local/records/" + serverProcess.getMeta().getServiceId().toString());
+                File directory = new File("local/records/" + serverProcess.getMeta().getServiceId());
 
                 FileUtility.copyFilesInDirectory(new File(path + "/logs"), directory);
                 FileUtility.copyFilesInDirectory(new File(path + "/crash-reports"), directory);
 
                 new Document("meta", serverProcess.getMeta()).saveAsConfig(Paths.get("local/records/" + serverProcess.getMeta()
-                                                                                                                     .getServiceId()
-                                                                                                                     .toString() + "/metadata.json"));
+                                                                                                                     .getServiceId() + "/metadata.json"));
             } catch (IOException ignored) {
             }
         }
@@ -489,7 +448,7 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
 
         CloudNetWrapper.getInstance().getServers().remove(getServiceId().getServerId());
         CloudNetWrapper.getInstance().getNetworkConnection().sendPacket(new PacketOutRemoveServer(serverInfo));
-        System.out.println("Server " + toString() + " was stopped");
+        System.out.println("Server " + this + " was stopped");
         return true;
     }
 
@@ -499,17 +458,22 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
     public void kill() {
         if (instance.isAlive()) {
             executeCommand("stop");
-            NetworkUtils.sleepUninterruptedly(500);
+            try {
+                if (!instance.waitFor(60, TimeUnit.SECONDS)) {
+                    instance.destroyForcibly();
+                }
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+                instance.destroyForcibly();
+            }
         }
-
-        instance.destroyForcibly();
     }
 
     /**
      * Copy the template to the temporary folder
      */
     public void copy() {
-        copy(null);
+        copy(this.serverInfo.getTemplate());
     }
 
     @Override
@@ -520,88 +484,6 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
     @Override
     public Process getInstance() {
         return instance;
-    }
-
-    /**
-     * Copy the template to the temporary folder
-     *
-     * @param template The template with information's
-     */
-    public void copy(Template template) {
-
-        if (template == null) {
-            template = this.serverProcess.getMeta().getTemplate();
-        }
-
-        if (instance != null && instance.isAlive()) {
-            executeCommand("save-all");
-            try {
-                Thread.sleep(1000);
-            } catch (InterruptedException e) {
-            }
-        }
-
-        Template x = CollectionWrapper.filter(serverGroup.getTemplates(), new Acceptable<Template>() {
-            @Override
-            public boolean isAccepted(Template template) {
-                return template != null && serverProcess.getMeta().getTemplate().getName().equals(template.getName());
-            }
-        });
-        if (custom != null) {
-            MasterTemplateDeploy masterTemplateDeploy = new MasterTemplateDeploy(path,
-                                                                                 new ConnectableAddress(CloudNetWrapper.getInstance()
-                                                                                                                       .getWrapperConfig()
-                                                                                                                       .getCloudnetHost(),
-                                                                                                        CloudNetWrapper.getInstance()
-                                                                                                                       .getWrapperConfig()
-                                                                                                                       .getWebPort()),
-                                                                                 CloudNetWrapper.getInstance().getSimpledUser(),
-                                                                                 CloudNetWrapper.getInstance().getOptionSet().has("ssl"),
-                                                                                 template,
-                                                                                 serverGroup.getName(),
-                                                                                 custom);
-            try {
-                masterTemplateDeploy.deploy();
-            } catch (Exception e) {
-                e.printStackTrace();
-            }
-        } else if (x != null && x.getBackend().equals(TemplateResource.MASTER)) {
-            MasterTemplateDeploy masterTemplateDeploy = new MasterTemplateDeploy(path,
-                                                                                 new ConnectableAddress(CloudNetWrapper.getInstance()
-                                                                                                                       .getWrapperConfig()
-                                                                                                                       .getCloudnetHost(),
-                                                                                                        CloudNetWrapper.getInstance()
-                                                                                                                       .getWrapperConfig()
-                                                                                                                       .getWebPort()),
-                                                                                 CloudNetWrapper.getInstance().getSimpledUser(),
-                                                                                 CloudNetWrapper.getInstance().getOptionSet().has("ssl"),
-                                                                                 template,
-                                                                                 serverGroup.getName(),
-                                                                                 custom);
-
-            try {
-                masterTemplateDeploy.deploy();
-            } catch (Exception e) {
-                e.printStackTrace();
-            }
-        } else {
-            System.out.println("Copying template from " + this.serverProcess.getMeta().getServiceId() + " to local directory...");
-
-            try {
-                FileUtility.copyFilesInDirectory(new File(this.path),
-                                                 new File("local/templates/" + serverGroup.getName() + NetworkUtils.SLASH_STRING + template.getName()));
-                FileUtility.deleteDirectory(new File("local/templates/" + serverGroup.getName() + NetworkUtils.SLASH_STRING + serverProcess.getMeta()
-                                                                                                                                           .getTemplate()
-                                                                                                                                           .getName() + "/CLOUD"));
-                new File("local/templates/" + serverGroup.getName() + NetworkUtils.SLASH_STRING + serverProcess.getMeta()
-                                                                                                               .getTemplate()
-                                                                                                               .getName() + "/plugins/CloudNetAPI.jar")
-                    .delete();
-            } catch (Exception e) {
-            }
-
-            System.out.println("Template " + template.getName() + " was copied!");
-        }
     }
 
     /**
@@ -616,47 +498,26 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
 
         {
             Template template = this.serverGroup.getGlobalTemplate();
-            if (custom != null) {
-                MasterTemplateLoader templateLoader = new MasterTemplateLoader((CloudNetWrapper.getInstance()
-                                                                                               .getOptionSet()
-                                                                                               .has("ssl") ? "https://" : "http://") + CloudNetWrapper
-                    .getInstance()
-                    .getWrapperConfig()
-                    .getCloudnetHost() + ':' + CloudNetWrapper.getInstance().getWrapperConfig().getWebPort() + "/cloudnet/api/v1/download",
-                                                                               dir.toString() + "/template.zip",
-                                                                               CloudNetWrapper.getInstance().getSimpledUser(),
-                                                                               template,
-                                                                               serverGroup.getName(),
-                                                                               custom);
-                System.out.println("Downloading template for " + this.serverProcess.getMeta()
-                                                                                   .getServiceId()
-                                                                                   .getGroup() + ' ' + template.getName());
-                templateLoader.load();
-                templateLoader.unZip(dir.toString());
-                FileUtility.copyFilesInDirectory(new File(dir.toString()), new File(path));
-                return true;
-            } else if (template.getBackend().equals(TemplateResource.URL) && template.getUrl() != null) {
+            if (template.getBackend().equals(TemplateResource.URL) && template.getUrl() != null) {
                 downloadURL(template);
                 return true;
             } else if (template.getBackend().equals(TemplateResource.MASTER) && CloudNetWrapper.getInstance().getSimpledUser() != null) {
                 downloadTemplate(template);
                 return true;
-            } else if (Files.exists(Paths.get("local/templates/" + serverGroup.getName() + NetworkUtils.SLASH_STRING + template.getName()))) {
-
-                FileUtility.copyFilesInDirectory(new File("local/templates/" + serverGroup.getName() + NetworkUtils.SLASH_STRING + template.getName()),
-                                                 new File(path));
+            } else if (Files.exists(Paths.get("local", "templates", serverGroup.getName(), template.getName()))) {
+                FileUtility.copyFilesInDirectory(new File("local/templates/" + serverGroup.getName(), template.getName()), new File(path));
             }
         }
 
-        if (serverProcess.getMeta().getUrl() != null) {
+        if (serverProcess.getMeta().getTemplateUrl() != null) {
             if (!Files.exists(Paths.get(path + "/plugins"))) {
                 Files.createDirectory(Paths.get(path + "/plugins"));
             }
 
-            TemplateLoader templateLoader = new TemplateLoader(serverProcess.getMeta().getUrl(), path + "/template.zip");
+            TemplateLoader templateLoader = new TemplateLoader(serverProcess.getMeta().getTemplateUrl(), path + "/template.zip");
             System.out.println("Downloading template for " + this.serverProcess.getMeta().getServiceId().getServerId() + ' ' + serverProcess
                 .getMeta()
-                .getUrl());
+                .getTemplateUrl());
             templateLoader.load();
             templateLoader.unZip(path);
         } else {
@@ -686,10 +547,6 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
         return true;
     }
 
-    public ServerProcess getServerProcess() {
-        return serverProcess;
-    }
-
     /**
      * Start the java process
      *
@@ -698,7 +555,7 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
     private void startProcess() throws Exception {
         StringBuilder commandBuilder = new StringBuilder();
         commandBuilder.append("java ");
-        for (String command : serverProcess.getMeta().getProcessParameters()) {
+        for (String command : serverProcess.getMeta().getJavaProcessParameters()) {
             commandBuilder.append(command).append(NetworkUtils.SPACE_STRING);
         }
 
@@ -706,10 +563,9 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
             commandBuilder.append(command).append(NetworkUtils.SPACE_STRING);
         }
 
-        commandBuilder.append(
-            "-XX:+UseG1GC -XX:MaxGCPauseMillis=50 -XX:MaxPermSize=256M -XX:-UseAdaptiveSizePolicy -XX:CompileThreshold=100 -Dcom.mojang.eula.agree=true -Dio.netty.recycler.maxCapacity=0 -Dio.netty.recycler.maxCapacity.default=0 -Djline.terminal=jline.UnsupportedTerminal -Xmx" + serverProcess
-                .getMeta()
-                .getMemory() + "M -jar ");
+        commandBuilder.append("-Dfile.encoding=UTF-8 -Dcom.mojang.eula.agree=true -Djline.terminal=jline.UnsupportedTerminal -Xmx")
+                      .append(serverProcess.getMeta().getMemory())
+                      .append("M -jar ");
 
         switch (serverGroup.getServerType()) {
             case CAULDRON:
@@ -727,6 +583,38 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
         }
 
         this.instance = Runtime.getRuntime().exec(commandBuilder.toString().split(NetworkUtils.SPACE_STRING), null, new File(path));
+    }
+
+    public ServerProcess getServerProcess() {
+        return serverProcess;
+    }
+
+    /**
+     * Download the template from template information's.
+     *
+     * @param template The template with the information's.
+     *
+     * @throws IOException Throws is something wrong
+     */
+    private void downloadTemplate(Template template) throws IOException {
+        String groupTemplates = "local/cache/web_templates/" + serverGroup.getName() + NetworkUtils.SLASH_STRING + template.getName();
+        if (!Files.exists(Paths.get(groupTemplates))) {
+            Files.createDirectories(Paths.get(groupTemplates));
+            MasterTemplateLoader templateLoader = new MasterTemplateLoader(
+                String.format("http://%s:%d/cloudnet/api/v1/download",
+                              CloudNetWrapper.getInstance().getWrapperConfig().getCloudnetHost(),
+                              CloudNetWrapper.getInstance().getWrapperConfig().getWebPort()),
+                groupTemplates + "/template.zip",
+                CloudNetWrapper.getInstance().getSimpledUser(),
+                template,
+                serverGroup.getName());
+            System.out.println("Downloading template for " + this.serverProcess.getMeta()
+                                                                               .getServiceId()
+                                                                               .getGroup() + ' ' + template.getName());
+            templateLoader.load();
+            templateLoader.unZip(groupTemplates);
+        }
+        FileUtility.copyFilesInDirectory(new File(groupTemplates), new File(path));
     }
 
     /**
@@ -751,40 +639,58 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
     }
 
     /**
-     * Download the template from template information's.
+     * Copy the template to the temporary folder
      *
-     * @param template The template with the information's.
-     *
-     * @throws IOException Throws is something wrong
+     * @param template The template with information
      */
-    private void downloadTemplate(Template template) throws IOException {
-        String groupTemplates = "local/cache/web_templates/" + serverGroup.getName() + NetworkUtils.SLASH_STRING + template.getName();
-        if (!Files.exists(Paths.get(groupTemplates))) {
-            Files.createDirectories(Paths.get(groupTemplates));
-            MasterTemplateLoader templateLoader = new MasterTemplateLoader(new StringBuilder(CloudNetWrapper.getInstance()
-                                                                                                            .getOptionSet()
-                                                                                                            .has("ssl") ? "https://" : "http://")
-                                                                               .append(CloudNetWrapper.getInstance()
-                                                                                                      .getWrapperConfig()
-                                                                                                      .getCloudnetHost())
-                                                                               .append(':')
-                                                                               .append(CloudNetWrapper.getInstance()
-                                                                                                      .getWrapperConfig()
-                                                                                                      .getWebPort())
-                                                                               .append("/cloudnet/api/v1/download")
-                                                                               .substring(0),
-                                                                           groupTemplates + "/template.zip",
-                                                                           CloudNetWrapper.getInstance().getSimpledUser(),
-                                                                           template,
-                                                                           serverGroup.getName(),
-                                                                           custom);
-            System.out.println("Downloading template for " + this.serverProcess.getMeta()
-                                                                               .getServiceId()
-                                                                               .getGroup() + ' ' + template.getName());
-            templateLoader.load();
-            templateLoader.unZip(groupTemplates);
+    public void copy(Template template) {
+
+        if (!serverGroup.getTemplates().contains(template)) {
+            return;
         }
-        FileUtility.copyFilesInDirectory(new File(groupTemplates), new File(path));
+
+        if (instance != null && instance.isAlive()) {
+            executeCommand("save-all");
+            try {
+                Thread.sleep(1000);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        }
+
+        if (template != null && template.getBackend().equals(TemplateResource.MASTER)) {
+            MasterTemplateDeploy masterTemplateDeploy =
+                new MasterTemplateDeploy(path,
+                                         new ConnectableAddress(CloudNetWrapper.getInstance().getWrapperConfig().getCloudnetHost(),
+                                                                CloudNetWrapper.getInstance().getWrapperConfig().getWebPort()),
+                                         CloudNetWrapper.getInstance().getSimpledUser(),
+                                         template,
+                                         serverGroup.getName());
+            try {
+                masterTemplateDeploy.deploy();
+            } catch (Exception e) {
+                e.printStackTrace();
+            }
+        } else if (template != null) {
+            System.out.println("Copying template from " + this.serverProcess.getMeta().getServiceId() + " to local directory...");
+
+            try {
+                FileUtility.copyFilesInDirectory(Paths.get(this.path),
+                                                 Paths.get("local", "templates", serverGroup.getName(), template.getName()));
+                FileUtility.deleteDirectory(Paths.get("local",
+                                                      "templates",
+                                                      serverGroup.getName(),
+                                                      serverProcess.getMeta().getTemplate().getName(),
+                                                      "CLOUD"));
+
+                Files.deleteIfExists(Paths.get("local", "templates", serverGroup.getName(), serverProcess.getMeta().getTemplate().getName(),
+                                               "plugins", "CloudNetAPI.jar"));
+            } catch (Exception e) {
+                e.printStackTrace();
+            }
+
+            System.out.println("Template " + template.getName() + " was copied!");
+        }
     }
 
     /**
@@ -793,11 +699,11 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
     public void restart() {
 
         kill();
-        System.out.println("Server " + toString() + " was killed and restart...");
+        System.out.println("Server " + this + " was killed and restart...");
         try {
             startProcess();
             startupTimeStamp = System.currentTimeMillis();
-            System.out.println("Server " + toString() + " restarted now!");
+            System.out.println("Server " + this + " restarted now!");
         } catch (Exception e) {
             e.printStackTrace();
         }
@@ -819,6 +725,7 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
                                                      .getTemplate()
                                                      .getName() + NetworkUtils.SLASH_STRING + name));
             } catch (IOException e) {
+                e.printStackTrace();
             }
         }
     }
